[#75569920] Fixed the horizontal scrolling of data tables

--- a/app/assets/stylesheets/express_admin/sections/_main_content.sass
+++ b/app/assets/stylesheets/express_admin/sections/_main_content.sass
@@ -1,5 +1,6 @@
 .main-container
   padding-bottom: 52px
+  padding-top: 70px
   @include clearfix
 
   > .row,
