--- a/app/assets/stylesheets/express_admin/shared/_tables.sass
+++ b/app/assets/stylesheets/express_admin/shared/_tables.sass
@@ -1,3 +1,10 @@
+.table-wrapper
+  margin-bottom: 20px
+  overflow: auto
+
+  .table-content
+    padding-right: 20px
+
 table, .table
   border-collapse: collapse
   width: 100%
